# protoc-gen-prost

./: Cargo.toml  Cargo.toml.tpl  README.md
proto/: foo.proto  hello.proto
src/: args.rs  generator.rs  lib.rs  main.rs  utils.rs
