[package]
name = "protoc-gen-prost"
version = "0.9.1"
authors = ["Tuetuopay <tuetuopay@me.com>"]
license = "Apache-2.0"
repository = "https://github.com/Tuetuopay/protoc-gen-prost"
documentation = "https://docs.rs/protoc-gen-prost"
readme = "README.md"
description = "A Protocol Buffers implementation for the Rust Language, protoc plugin."
edition = "2021"

[dependencies]
anyhow = "1"
prettyplease = "0.1"
proc-macro2 = "1"
prost = { version = "0.9", default-features = false }
prost-build = "0.9.1"
prost-types = { version = "0.9", default-features = false }
quote = "1"
syn = "1"

[patch.crates-io]
prost = { git = "https://github.com/Tuetuopay/prost.git", branch = "api-expose" }
prost-build = { git = "https://github.com/Tuetuopay/prost.git", branch = "api-expose" }
prost-types = { git = "https://github.com/Tuetuopay/prost.git", branch = "api-expose" }
